force-app/main/default/objects/Scheduling_Control__c/Scheduling_Control__c.object-meta.xml
<CustomObject>
    <label>Scheduling Control</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Scheduling Control Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduling Controls</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>