force-app/main/default/objects/Scheduling_Control__c/fields/Active_Control__c.field-meta.xml
<CustomField>
    <fullName>Active_Control__c</fullName>
    <formula>if ( 

( isblank(Control_End_Date__c) || today() &lt;  Control_End_Date__c ),

TRUE,

FALSE

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Control</label>
    <type>Checkbox</type>
</CustomField>