force-app/main/default/objects/Scheduling_Control__c/fields/Community_Area__c.field-meta.xml
<CustomField>
    <fullName>Community_Area__c</fullName>
    <label>Community Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Albany Park</fullName>
            </value>
            <value>
                <fullName>Archer Heights</fullName>
            </value>
            <value>
                <fullName>Armour Square</fullName>
            </value>
            <value>
                <fullName>Ashburn</fullName>
            </value>
            <value>
                <fullName>Auburn Gresham</fullName>
            </value>
            <value>
                <fullName>Austin</fullName>
            </value>
            <value>
                <fullName>Avalon Park</fullName>
            </value>
            <value>
                <fullName>Avondale</fullName>
            </value>
            <value>
                <fullName>Belmont Cragin</fullName>
            </value>
            <value>
                <fullName>Beverly</fullName>
            </value>
            <value>
                <fullName>Bridgeport</fullName>
            </value>
            <value>
                <fullName>Brighton Park</fullName>
            </value>
            <value>
                <fullName>Burnside</fullName>
            </value>
            <value>
                <fullName>Calumet Heights</fullName>
            </value>
            <value>
                <fullName>Chatham</fullName>
            </value>
            <value>
                <fullName>Chicago Lawn</fullName>
            </value>
            <value>
                <fullName>Clearing</fullName>
            </value>
            <value>
                <fullName>Douglas</fullName>
            </value>
            <value>
                <fullName>Dunning</fullName>
            </value>
            <value>
                <fullName>East Garfield Park</fullName>
            </value>
            <value>
                <fullName>East Side</fullName>
            </value>
            <value>
                <fullName>Edgewater</fullName>
            </value>
            <value>
                <fullName>Edison Park</fullName>
            </value>
            <value>
                <fullName>Englewood</fullName>
            </value>
            <value>
                <fullName>Forest Glen</fullName>
            </value>
            <value>
                <fullName>Fuller Park</fullName>
            </value>
            <value>
                <fullName>Gage Park</fullName>
            </value>
            <value>
                <fullName>Garfield Ridge</fullName>
            </value>
            <value>
                <fullName>Grand Boulevard</fullName>
            </value>
            <value>
                <fullName>Greater Grand Crossing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>