force-app/main/default/objects/Scheduling_Control__c/fields/Control_Duration__c.field-meta.xml
<CustomField>
    <fullName>Control_Duration__c</fullName>
    <label>Control Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-Time</fullName>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>