force-app/main/default/objects/Scheduling_Control__c/fields/Control_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Control_End_Date__c</fullName>
    <label>Control End Date</label>
    <type>Date</type>
</CustomField>