force-app/main/default/objects/Scheduling_Control__c/fields/Control_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Control_Start_Date__c</fullName>
    <label>Control Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>