force-app/main/default/objects/Scheduling_Control__c/fields/Control_Type__c.field-meta.xml
<CustomField>
    <fullName>Control_Type__c</fullName>
    <label>Control Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>