force-app/main/default/objects/Scheduling_Control__c/fields/Crew_Chief__c.field-meta.xml
<CustomField>
    <fullName>Crew_Chief__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Crew Chief</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Employee__c.Hourly_Wage__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Scheduling Controls</relationshipLabel>
    <relationshipName>Scheduling_Controls</relationshipName>
    <type>Lookup</type>
</CustomField>