force-app/main/default/objects/Scheduling_Control__c/fields/Intern__c.field-meta.xml
<CustomField>
    <fullName>Intern__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Worker</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Placement__c.Organization_Summary__c</field>
            <operation>equals</operation>
            <value>Cleanslate Chicago</value>
        </filterItems>
        <filterItems>
            <field>Placement__c.Job_Type__c</field>
            <operation>equals</operation>
            <value>Internship, Temporary, External Transitional, Long-Term, Short-Term</value>
        </filterItems>
        <filterItems>
            <field>Placement__c.End_Date__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Scheduling Controls (Intern)</relationshipLabel>
    <relationshipName>Scheduling_Controls1</relationshipName>
    <type>Lookup</type>
</CustomField>