force-app/main/default/objects/Scheduling_Control__c/fields/Interpersonal_Restriction__c.field-meta.xml
<CustomField>
    <fullName>Interpersonal_Restriction__c</fullName>
    <formula>if (Id=&quot;01If3000000cbsl&quot; &amp;&amp; not (isblank(Crew_Chief__c)) &amp;&amp; not (isblank(Send_Out_Employment__c)), Crew_Chief__r.Name&amp;&quot;, &quot;&amp;Send_Out_Employment__c,

if (Id=&quot;01If3000000cbsl&quot; &amp;&amp; not (isblank(Crew_Chief__c)), Crew_Chief__r.Name,

if (Id=&quot;01If3000000cbsl&quot; &amp;&amp; not (isblank(Send_Out_Employment__c)), Send_Out_Employment__r.Participant_Name__c,

NULL)))</formula>
    <label>Interpersonal Restriction</label>
    <type>Text</type>
</CustomField>