force-app/main/default/objects/Scheduling_Control__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North Side</fullName>
            </value>
            <value>
                <fullName>South Side</fullName>
            </value>
            <value>
                <fullName>West Side</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>