force-app/main/default/objects/Scheduling_Control__c/fields/Location_Day_Restriction__c.field-meta.xml
<CustomField>
    <fullName>Location_Day_Restriction__c</fullName>
    <label>Location/Day Restriction</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sunday</fullName>
            </value>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>North Side</fullName>
            </value>
            <value>
                <fullName>South Side</fullName>
            </value>
            <value>
                <fullName>West Side</fullName>
            </value>
            <value>
                <fullName>Albany Park</fullName>
            </value>
            <value>
                <fullName>Archer Heights</fullName>
            </value>
            <value>
                <fullName>Armour Square</fullName>
            </value>
            <value>
                <fullName>Ashburn</fullName>
            </value>
            <value>
                <fullName>Auburn Gresham</fullName>
            </value>
            <value>
                <fullName>Austin</fullName>
            </value>
            <value>
                <fullName>Avalon Park</fullName>
            </value>
            <value>
                <fullName>Avondale</fullName>
            </value>
            <value>
                <fullName>Belmont Cragin</fullName>
            </value>
            <value>
                <fullName>Beverly</fullName>
            </value>
            <value>
                <fullName>Bridgeport</fullName>
            </value>
            <value>
                <fullName>Brighton Park</fullName>
            </value>
            <value>
                <fullName>Burnside</fullName>
            </value>
            <value>
                <fullName>Calumet Heights</fullName>
            </value>
            <value>
                <fullName>Chatham</fullName>
            </value>
            <value>
                <fullName>Chicago Lawn</fullName>
            </value>
            <value>
                <fullName>Clearing</fullName>
            </value>
            <value>
                <fullName>Douglas</fullName>
            </value>
            <value>
                <fullName>Dunning</fullName>
            </value>
            <value>
                <fullName>East Garfield Park</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>