force-app/main/default/objects/Scheduling_Control__c/fields/Send_Out_Employment__c.field-meta.xml
<CustomField>
    <fullName>Send_Out_Employment__c</fullName>
    <label>Send Out / Employment</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Scheduling Controls</relationshipLabel>
    <relationshipName>Scheduling_Controls</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>