force-app/main/default/objects/Scheduling_Control__c/recordTypes/Day.recordType-meta.xml
<RecordType>
    <fullName>Day</fullName>
    <active>true</active>
    <label>Day</label>
</RecordType>