force-app/main/default/objects/Scheduling_Control__c/recordTypes/Interpersonal.recordType-meta.xml
<RecordType>
    <fullName>Interpersonal</fullName>
    <active>true</active>
    <label>Interpersonal</label>
</RecordType>