force-app/main/default/objects/Scheduling_Control__c/validationRules/Control_Duration.validationRule-meta.xml
<ValidationRule>
    <fullName>Control_Duration</fullName>
    <active>true</active>
    <errorConditionFormula>RecordTypeId = &apos;012f3000000coAa&apos;

&amp;&amp;

isblank(text(Control_Duration__c))</errorConditionFormula>
    <errorDisplayField>Control_Duration__c</errorDisplayField>
    <errorMessage>Please select a value in the &apos;Control Duration&apos; field.</errorMessage>
</ValidationRule>