force-app/main/default/objects/Scheduling_Control__c/validationRules/Control_Type_Switch.validationRule-meta.xml
<ValidationRule>
    <fullName>Control_Type_Switch</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(PRIORVALUE(Control_Type__c )))

&amp;&amp;

ischanged(Control_Type__c)</errorConditionFormula>
    <errorDisplayField>Control_Type__c</errorDisplayField>
    <errorMessage>You cannot switch the control type once it is active.</errorMessage>
</ValidationRule>