force-app/main/default/objects/Scheduling_Control__c/validationRules/Interpersonal_Controls.validationRule-meta.xml
<ValidationRule>
    <fullName>Interpersonal_Controls</fullName>
    <active>true</active>
    <errorConditionFormula>not(isblank(Crew_Chief__c))

&amp;&amp;

not(isblank(Intern__c))</errorConditionFormula>
    <errorMessage>Please create a separate record for each interpersonal control.</errorMessage>
</ValidationRule>