force-app/main/default/objects/Scheduling_Control__c/validationRules/Recurring_Control_Duration.validationRule-meta.xml
<ValidationRule>
    <fullName>Recurring_Control_Duration</fullName>
    <active>true</active>
    <errorConditionFormula>isblank(Location_Day_Restriction__c)

&amp;&amp;

ispickval(Control_Duration__c, &quot;Recurring&quot;)</errorConditionFormula>
    <errorDisplayField>Location_Day_Restriction__c</errorDisplayField>
    <errorMessage>Please select a value in the &apos;Location/Day Restriction&apos; field.</errorMessage>
</ValidationRule>