force-app/main/default/objects/Scheduling_Control__c/validationRules/Send_Out_ID_Cannot_Equal_Intern_ID.validationRule-meta.xml
<ValidationRule>
    <fullName>Send_Out_ID_Cannot_Equal_Intern_ID</fullName>
    <active>true</active>
    <errorConditionFormula>Intern__r.Id = Send_Out_Employment__r.Id</errorConditionFormula>
    <errorDisplayField>Intern__c</errorDisplayField>
    <errorMessage>You cannot choose the same person for whom you are creating this control for. Please select a different intern.</errorMessage>
</ValidationRule>